2014-01-21  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/59860
	* gcc.dg/strlenopt-4.c: Expect the same counts on s390*-* as on all
	other targets.

2014-01-20  Richard Biener  <rguenther@suse.de>

	PR middle-end/59860
	* gcc.dg/pr59860.c: New testcase.

2014-01-20  Marek Polacek  <polacek@redhat.com>

	Backported from mainline
	2014-01-17  Marek Polacek  <polacek@redhat.com>

	PR c++/59838
	* g++.dg/diagnostic/pr59838.C: New test.

2014-01-19  Paul Thomas  <pault@gcc.gnu.org>

	Backport from mainline
	2013-12-01  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34547
	* gfortran.dg/null_5.f90 : Include new error.
	* gfortran.dg/null_6.f90 : Include new error.

2014-01-17  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2014-01-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59794
	* c-c++-common/convert-vec-1.c: Also prune ABI change for
	Linux/x86.
	* g++.dg/cpp0x/constexpr-53094-2.C: Likewise.
	* g++.dg/ext/attribute-test-1.C: Likewise.
	* g++.dg/ext/attribute-test-2.C: Likewise.
	* g++.dg/ext/attribute-test-3.C: Likewise.
	* g++.dg/ext/attribute-test-4.C: Likewise.
	* g++.dg/torture/pr38565.C: Likewise.
	* gcc.dg/pr53060.c: Likewise.
	* c-c++-common/scal-to-vec2.c: Add -msse2 for x86.
	* c-c++-common/vector-compare-2.c: Likewise.
	* gcc.dg/Wstrict-aliasing-bogus-ref-all-2.c: Likewise.
	* g++.dg/conversion/simd1.C: Add -msse2 for x86.  Adjust
	dg-message line number.

2014-01-17  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2014-01-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59794
	* gcc.target/i386/pr39162.c (y): New __m256i variable.
	(bar): Change return type to void.  Set y to x.
	* gcc.target/i386/pr59794-1.c: New testcase.
	* gcc.target/i386/pr59794-2.c: Likewise.
	* gcc.target/i386/pr59794-3.c: Likewise.
	* gcc.target/i386/pr59794-4.c: Likewise.
	* gcc.target/i386/pr59794-5.c: Likewise.
	* gcc.target/i386/pr59794-6.c: Likewise.
	* gcc.target/i386/pr59794-7.c: Likewise.

2014-01-17  Matthias Klose  <doko@ubuntu.com>
