@@ -1,3 +1,11 @@
+2014-01-22  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline
+	2014-01-20  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/59880
+	* gcc.target/i386/pr59880.c: New test.
+
 2014-01-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/59860
